@@ -11,12 +11,15 @@ AUX ruby19-rubygems-gentoo.patch 1914 RMD160 9668808eb50ac0e96265d8756d6751f625c
 AUX ruby19-rubygems-proxy.patch 407 RMD160 0bfedce42f4879d729b8de650f99a345faaa7ec4 SHA1 aa23a497f0c581374f687690b0b1035092b4b488 SHA256 3cadd23dfbb128e7029ecc01aab3f00f1aaf011e50492c3a967812a2395e1a59
 DIST ruby-1.8.7-p249.tar.bz2 4153461 RMD160 96b238bd7194652ec194a505c2e5911441c5c5ee SHA1 2947f21f22e9345a3e94d84e6f88e7d0fc98a871 SHA256 8b89448fc79df6862660e9f77e884f06c76da28f078d8edd2f17567a615f3af5
 DIST ruby-1.8.7-p299.tar.bz2 4183359 RMD160 0ea4a05f439b6a2cf4bf53339df48aed329f9e43 SHA1 9c66c6ee21d427b5f3183b6c42beb02aa8618cef SHA256 3d8a1e4204f1fb69c9e9ffd637c7f7661a062fc2246c559f25fda5312cfd65d8
+DIST ruby-1.9.2-p0.tar.bz2 8495472 RMD160 dc15937c884b0f93863e9871304bae95e1233e15 SHA1 c0fc7e1047f1eac7e554e9818513593b0d398698 SHA256 e9710990ed8c2e794123aba509010471915fb13c27dae0118831d2001a9c8d3b
 DIST ruby-1.9.2-rc2.tar.bz2 8480974 RMD160 d1f1eded267407699d6975bc284f00a6ad7930a5 SHA1 d4cbbb275b0534ccf4da27847972989adcfdb76d SHA256 692ebae991b104482dc9f0d220c1afb6b690a338b3b815aaa4f62954d2fa1b4a
 DIST ruby-patches-1.8.7_p249.tar.bz2 1499 RMD160 98670658db00a1c4ad563e68bf25263fd7f317fd SHA1 d371f7f25a75ac8626e2e87a570bb52a60579fb8 SHA256 b35ba05fb07c0264a9232e756cd80ff7f284fb8aa464368ce028d67fa11f31af
 DIST ruby-patches-1.8.7_p299.tar.bz2 1781 RMD160 edf80f6ea3809b3a9f2e697b8f78baeb5df2e346 SHA1 29743874ace02f75dc4e1fcf4516cfac589748b3 SHA256 83931a1d9d59a307cf5b173e7b4235a8606f61c86636e6e489f4da15bde8110d
+DIST ruby-patches-1.9.2.tar.bz2 2272 RMD160 d10f950c40384fe41f7eba14e55621aaa7c0ca06 SHA1 b9eb2d01f49ebf032257f84b00ec56420172234d SHA256 d4dd786cf637e5d4415b850bceca16caa9f6bd0b515fff09a64bdc18bc151de4
 DIST ruby-patches-1.9.2_rc2-r0.2.tar.bz2 1669 RMD160 2ffb5afed0b83c6057f2a6690126228407464ea8 SHA1 7eeba042beeb7b044b63d4c760aca3ebb7d10f66 SHA256 89e021312256e6d6b2880794b7f15226b5b19709263933dc4bda432908370673
 EBUILD ruby-1.8.7_p249.ebuild 5344 RMD160 daf99ed150004e6599f7382bc4faa75c3145f8e6 SHA1 fe213d1de7cb9ac8367d9e0b0beab76737587b9b SHA256 f312b5988ad4f2168b271d363d01d453bdda76f6e4b53add9e387688fdddbbda
 EBUILD ruby-1.8.7_p299.ebuild 5584 RMD160 2d8a88f209c597f3feaf81b1a51a647c949e8b9b SHA1 0d0578904d0efb533e4ec7d05874aa7ab7ddff69 SHA256 b9c56396c90bb0619ae048d5c55bc946bf17dd16ebccd09867e4b9bbe0f9e66c
+EBUILD ruby-1.9.2.ebuild 6098 RMD160 d1ad80c3a6ae9eca04ff1243601ec0bf2423883e SHA1 482199dccfd75b7b8a99fd22ccf092b9e45b7c2b SHA256 50913ae4e3aa6ff03f98785fa66afa8ddf576f02108b661c2d8ebe6312cf8d2c
 EBUILD ruby-1.9.2_rc2.ebuild 5702 RMD160 049cc604b5c76964f0114d29a68a3fac8586210a SHA1 4aae643fbe7a780bd7097da25bae3d2784aa06dc SHA256 79f16430664bbc0cc9e2c6ab1e733ec5855d949cc01f6f4f7f2fd22a080f33ba
-MISC ChangeLog 66527 RMD160 cbf2679cf37e986c2efce21ecdc8239ea34c7c7b SHA1 f1616298f09c0bf171a3f6d7d184be2cad14c4c8 SHA256 65368519b9fa85893e30de10a32931828ef7f815653f93833157fd9d7d607ac9
+MISC ChangeLog 66674 RMD160 683fd5e18e4f7c5b105c9f623d22d1d79b644597 SHA1 3f72c70d0403fbcfc031e86750b4c56e2ce9e3d4 SHA256 39554ef94e53649a71abf97de3aca0c02733d21c8c6142afcf45474880830f60
 MISC metadata.xml 264 RMD160 431f9cb912904a43270caa28a6811a717d8a954e SHA1 9f11bb2cd7f7c1b586abf2b3d7a15b9156ed5bf8 SHA256 18838bb6849b82154fd830eb56e098c356421ac47e902ed33a886e26354d027b
